# rust-ssh-client

./: .gitignore  implementation_plan.md  index.html  package-lock.json  package.json
.agent/workflows/: release-v1.md
js/: app.js  connections.js  filemanager.js  splitpane.js  terminal.js  titlebar.js
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: app.json  app.toml  connection.json  sftp.json  ssh.json
src-tauri/src/: commands.rs  connection.rs  lib.rs  main.rs  sftp.rs  ssh.rs
styles/: filemanager.css  main.css  sidebar.css  terminal.css  titlebar.css
