[package]
name = "rustssh"
version = "1.0.0"
edition = "2021"
description = "A modern SSH/SFTP client"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-os = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
russh = "0.46"
russh-keys = "0.46"
russh-sftp = "2.0"
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "5"
async-trait = "0.1"
log = "0.4"
env_logger = "0.11"
anyhow = "1"
notify = "6"
opener = "0.7"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
